Add code to save plot

--- a/multivariate_linear_regression.ipynb
+++ b/multivariate_linear_regression.ipynb
@@ -193,7 +193,8 @@
     "ax.set_zlabel('Price (normalized)')\n",
     "ax.scatter(bedrooms, areas, prices, color='green')\n",
     "ax.plot_trisurf(bedrooms, areas, estimates[0][0] + estimates[0][1] * areas \n",
-    "          + estimates[0][2] * bedrooms, alpha=0.5)"
+    "          + estimates[0][2] * bedrooms, alpha=0.5)\n",
+    "plt.savefig('result-plots/multivariate_linear_regression.svg')"
    ]
   }
  ],
