Add data splitter

--- a/knn_classification.ipynb
+++ b/knn_classification.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from classifier import Classifier"
    ]
   },
   {
@@ -44,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f758264b4a8>"
+       "<seaborn.axisgrid.PairGrid at 0x7f75818e3048>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,6 +74,25 @@
    "source": [
     "# Pair plots between features of different species\n",
     "sns.pairplot(data, hue=\"species\", size=3, diag_kind='kde')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_data(df, ratio, fold=0):\n",
+    "    test_start = int(len(df) * ratio * fold)\n",
+    "    test_stop = int(len(df) * ratio * (fold + 1))\n",
+    "    test_data = df.iloc[test_start:test_stop, :]\n",
+    "    train_data = df.drop(test_data.index)\n",
+    "    test_output = test_data['species']\n",
+    "    test_input = test_data.loc[:, test_data.columns != 'species']\n",
+    "    return train_data, test_input, test_output\n",
+    "\n",
+    "def cross_validate(df, folds):\n",
+    "    pass"
    ]
   }
  ],
