--- a/knn_classification.ipynb
+++ b/knn_classification.ipynb
@@ -62,172 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5.1, 3.5, 1.4, 0.2],\n",
-       "       [4.9, 3. , 1.4, 0.2],\n",
-       "       [4.7, 3.2, 1.3, 0.2],\n",
-       "       [4.6, 3.1, 1.5, 0.2],\n",
-       "       [5. , 3.6, 1.4, 0.2],\n",
-       "       [5.4, 3.9, 1.7, 0.4],\n",
-       "       [4.6, 3.4, 1.4, 0.3],\n",
-       "       [5. , 3.4, 1.5, 0.2],\n",
-       "       [4.4, 2.9, 1.4, 0.2],\n",
-       "       [4.9, 3.1, 1.5, 0.1],\n",
-       "       [5.4, 3.7, 1.5, 0.2],\n",
-       "       [4.8, 3.4, 1.6, 0.2],\n",
-       "       [4.8, 3. , 1.4, 0.1],\n",
-       "       [4.3, 3. , 1.1, 0.1],\n",
-       "       [5.8, 4. , 1.2, 0.2],\n",
-       "       [5.7, 4.4, 1.5, 0.4],\n",
-       "       [5.4, 3.9, 1.3, 0.4],\n",
-       "       [5.1, 3.5, 1.4, 0.3],\n",
-       "       [5.7, 3.8, 1.7, 0.3],\n",
-       "       [5.1, 3.8, 1.5, 0.3],\n",
-       "       [5.4, 3.4, 1.7, 0.2],\n",
-       "       [5.1, 3.7, 1.5, 0.4],\n",
-       "       [4.6, 3.6, 1. , 0.2],\n",
-       "       [5.1, 3.3, 1.7, 0.5],\n",
-       "       [4.8, 3.4, 1.9, 0.2],\n",
-       "       [5. , 3. , 1.6, 0.2],\n",
-       "       [5. , 3.4, 1.6, 0.4],\n",
-       "       [5.2, 3.5, 1.5, 0.2],\n",
-       "       [5.2, 3.4, 1.4, 0.2],\n",
-       "       [4.7, 3.2, 1.6, 0.2],\n",
-       "       [4.8, 3.1, 1.6, 0.2],\n",
-       "       [5.4, 3.4, 1.5, 0.4],\n",
-       "       [5.2, 4.1, 1.5, 0.1],\n",
-       "       [5.5, 4.2, 1.4, 0.2],\n",
-       "       [4.9, 3.1, 1.5, 0.1],\n",
-       "       [5. , 3.2, 1.2, 0.2],\n",
-       "       [5.5, 3.5, 1.3, 0.2],\n",
-       "       [4.9, 3.1, 1.5, 0.1],\n",
-       "       [4.4, 3. , 1.3, 0.2],\n",
-       "       [5.1, 3.4, 1.5, 0.2],\n",
-       "       [5. , 3.5, 1.3, 0.3],\n",
-       "       [4.5, 2.3, 1.3, 0.3],\n",
-       "       [4.4, 3.2, 1.3, 0.2],\n",
-       "       [5. , 3.5, 1.6, 0.6],\n",
-       "       [5.1, 3.8, 1.9, 0.4],\n",
-       "       [4.8, 3. , 1.4, 0.3],\n",
-       "       [5.1, 3.8, 1.6, 0.2],\n",
-       "       [4.6, 3.2, 1.4, 0.2],\n",
-       "       [5.3, 3.7, 1.5, 0.2],\n",
-       "       [5. , 3.3, 1.4, 0.2],\n",
-       "       [7. , 3.2, 4.7, 1.4],\n",
-       "       [6.4, 3.2, 4.5, 1.5],\n",
-       "       [6.9, 3.1, 4.9, 1.5],\n",
-       "       [5.5, 2.3, 4. , 1.3],\n",
-       "       [6.5, 2.8, 4.6, 1.5],\n",
-       "       [5.7, 2.8, 4.5, 1.3],\n",
-       "       [6.3, 3.3, 4.7, 1.6],\n",
-       "       [4.9, 2.4, 3.3, 1. ],\n",
-       "       [6.6, 2.9, 4.6, 1.3],\n",
-       "       [5.2, 2.7, 3.9, 1.4],\n",
-       "       [5. , 2. , 3.5, 1. ],\n",
-       "       [5.9, 3. , 4.2, 1.5],\n",
-       "       [6. , 2.2, 4. , 1. ],\n",
-       "       [6.1, 2.9, 4.7, 1.4],\n",
-       "       [5.6, 2.9, 3.6, 1.3],\n",
-       "       [6.7, 3.1, 4.4, 1.4],\n",
-       "       [5.6, 3. , 4.5, 1.5],\n",
-       "       [5.8, 2.7, 4.1, 1. ],\n",
-       "       [6.2, 2.2, 4.5, 1.5],\n",
-       "       [5.6, 2.5, 3.9, 1.1],\n",
-       "       [5.9, 3.2, 4.8, 1.8],\n",
-       "       [6.1, 2.8, 4. , 1.3],\n",
-       "       [6.3, 2.5, 4.9, 1.5],\n",
-       "       [6.1, 2.8, 4.7, 1.2],\n",
-       "       [6.4, 2.9, 4.3, 1.3],\n",
-       "       [6.6, 3. , 4.4, 1.4],\n",
-       "       [6.8, 2.8, 4.8, 1.4],\n",
-       "       [6.7, 3. , 5. , 1.7],\n",
-       "       [6. , 2.9, 4.5, 1.5],\n",
-       "       [5.7, 2.6, 3.5, 1. ],\n",
-       "       [5.5, 2.4, 3.8, 1.1],\n",
-       "       [5.5, 2.4, 3.7, 1. ],\n",
-       "       [5.8, 2.7, 3.9, 1.2],\n",
-       "       [6. , 2.7, 5.1, 1.6],\n",
-       "       [5.4, 3. , 4.5, 1.5],\n",
-       "       [6. , 3.4, 4.5, 1.6],\n",
-       "       [6.7, 3.1, 4.7, 1.5],\n",
-       "       [6.3, 2.3, 4.4, 1.3],\n",
-       "       [5.6, 3. , 4.1, 1.3],\n",
-       "       [5.5, 2.5, 4. , 1.3],\n",
-       "       [5.5, 2.6, 4.4, 1.2],\n",
-       "       [6.1, 3. , 4.6, 1.4],\n",
-       "       [5.8, 2.6, 4. , 1.2],\n",
-       "       [5. , 2.3, 3.3, 1. ],\n",
-       "       [5.6, 2.7, 4.2, 1.3],\n",
-       "       [5.7, 3. , 4.2, 1.2],\n",
-       "       [5.7, 2.9, 4.2, 1.3],\n",
-       "       [6.2, 2.9, 4.3, 1.3],\n",
-       "       [5.1, 2.5, 3. , 1.1],\n",
-       "       [5.7, 2.8, 4.1, 1.3],\n",
-       "       [6.3, 3.3, 6. , 2.5],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [7.1, 3. , 5.9, 2.1],\n",
-       "       [6.3, 2.9, 5.6, 1.8],\n",
-       "       [6.5, 3. , 5.8, 2.2],\n",
-       "       [7.6, 3. , 6.6, 2.1],\n",
-       "       [4.9, 2.5, 4.5, 1.7],\n",
-       "       [7.3, 2.9, 6.3, 1.8],\n",
-       "       [6.7, 2.5, 5.8, 1.8],\n",
-       "       [7.2, 3.6, 6.1, 2.5],\n",
-       "       [6.5, 3.2, 5.1, 2. ],\n",
-       "       [6.4, 2.7, 5.3, 1.9],\n",
-       "       [6.8, 3. , 5.5, 2.1],\n",
-       "       [5.7, 2.5, 5. , 2. ],\n",
-       "       [5.8, 2.8, 5.1, 2.4],\n",
-       "       [6.4, 3.2, 5.3, 2.3],\n",
-       "       [6.5, 3. , 5.5, 1.8],\n",
-       "       [7.7, 3.8, 6.7, 2.2],\n",
-       "       [7.7, 2.6, 6.9, 2.3],\n",
-       "       [6. , 2.2, 5. , 1.5],\n",
-       "       [6.9, 3.2, 5.7, 2.3],\n",
-       "       [5.6, 2.8, 4.9, 2. ],\n",
-       "       [7.7, 2.8, 6.7, 2. ],\n",
-       "       [6.3, 2.7, 4.9, 1.8],\n",
-       "       [6.7, 3.3, 5.7, 2.1],\n",
-       "       [7.2, 3.2, 6. , 1.8],\n",
-       "       [6.2, 2.8, 4.8, 1.8],\n",
-       "       [6.1, 3. , 4.9, 1.8],\n",
-       "       [6.4, 2.8, 5.6, 2.1],\n",
-       "       [7.2, 3. , 5.8, 1.6],\n",
-       "       [7.4, 2.8, 6.1, 1.9],\n",
-       "       [7.9, 3.8, 6.4, 2. ],\n",
-       "       [6.4, 2.8, 5.6, 2.2],\n",
-       "       [6.3, 2.8, 5.1, 1.5],\n",
-       "       [6.1, 2.6, 5.6, 1.4],\n",
-       "       [7.7, 3. , 6.1, 2.3],\n",
-       "       [6.3, 3.4, 5.6, 2.4],\n",
-       "       [6.4, 3.1, 5.5, 1.8],\n",
-       "       [6. , 3. , 4.8, 1.8],\n",
-       "       [6.9, 3.1, 5.4, 2.1],\n",
-       "       [6.7, 3.1, 5.6, 2.4],\n",
-       "       [6.9, 3.1, 5.1, 2.3],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [6.8, 3.2, 5.9, 2.3],\n",
-       "       [6.7, 3.3, 5.7, 2.5],\n",
-       "       [6.7, 3. , 5.2, 2.3],\n",
-       "       [6.3, 2.5, 5. , 1.9],\n",
-       "       [6.5, 3. , 5.2, 2. ],\n",
-       "       [6.2, 3.4, 5.4, 2.3],\n",
-       "       [5.9, 3. , 5.1, 1.8]])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = np.array(data['species'])\n",
     "x = np.array(data.loc[:, data.columns != 'species'])\n",
+    "ratio = 0.25\n",
     "\n",
     "def split_data(x, y, ratio, fold=0):\n",
     "    # Define the boundaries of the test data\n",
@@ -238,14 +79,12 @@
     "    train_y = np.concatenate((y[:test_start], y[test_stop:]))\n",
     "    test_x = x[test_start:test_stop]\n",
     "    test_y = y[test_start:test_stop]\n",
-    "    return train_x, train_y, test_x, test_y\n",
-    "\n",
-    "x"
+    "    return train_x, train_y, test_x, test_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,13 +140,6 @@
     "        # negative Cosine similarity (cosine similarity is inversely proportional to distance)\n",
     "        # return x1.dot(x2)/(np.linalg.norm(x1) * np.linalg.norm(x2)) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
