Restructure project folders, update paths accordingly

--- a/notebooks/multivariate_linear_regression.ipynb
+++ b/notebooks/multivariate_linear_regression.ipynb
@@ -53,7 +53,7 @@
    ],
    "source": [
     "# read data and parse it\n",
-    "data = pd.read_csv('./datasets/multivariate_linear_regression.csv', \n",
+    "data = pd.read_csv('../datasets/multivariate_linear_regression.csv', \n",
     "                   names=[\"areas\",\"bedrooms\",\"prices\"])\n",
     "# normalizing the data to be between 0 to 1\n",
     "data = (data - data.mean())/data.std()\n",
@@ -184,7 +184,7 @@
     "ax.scatter(bedrooms, areas, prices, color='green')\n",
     "ax.plot_trisurf(bedrooms, areas, estimates[0][0] + estimates[0][1] * areas \n",
     "          + estimates[0][2] * bedrooms, alpha=0.5)\n",
-    "plt.savefig('result-plots/multivariate_linear_regression.svg')"
+    "plt.savefig('../result-plots/multivariate_linear_regression.svg')"
    ]
   }
  ],
