--- a/notebooks/univariate_linear_regression.ipynb
+++ b/notebooks/univariate_linear_regression.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "# read data and parse it\n",
-    "data = np.genfromtxt('./datasets/univariate_linear_regression.csv', delimiter=',')\n",
+    "data = np.genfromtxt('../datasets/univariate_linear_regression.csv', delimiter=',')\n",
     "x = data[:, 0].reshape(-1, 1)\n",
     "y = data[:, 1].reshape(-1, 1)\n",
     "ones = np.ones((x.shape[0], 1))\n",
@@ -173,7 +173,7 @@
     "x_vals = np.array(axes.get_xlim()) \n",
     "y_vals = estimates[0][0] + estimates[0][1] * x_vals #the line equation\n",
     "plt.plot(x_vals, y_vals, 'k--')\n",
-    "plt.savefig('result-plots/univariate_linear_regression.svg')"
+    "plt.savefig('../result-plots/univariate_linear_regression.svg')"
    ]
   },
   {
