--- a/notebooks/knn_classification.ipynb
+++ b/notebooks/knn_classification.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "# read data and parse it\n",
-    "data = pd.read_csv('../datasets/iris_knn_classification.csv', \n",
+    "data = pd.read_csv('../datasets/iris.csv', \n",
     "                   names=[\"sepal_length\",\"sepal_width\",\"petal_length\",\"petal_width\",\"species\"])\n",
     "data = data.sample(len(data))\n",
     "# Pair plots between features of different species\n",
