Change header from KNN

--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# K-Nearest Neighbors Classification\n",
+    "# Naive Bayes Classification\n",
     "\n",
-    "The dataset was obtained from https://archive.ics.uci.edu/ml/datasets/Iris."
+    "The dataset was obtained from https://www.kaggle.com/nltkdata/movie-review."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,13 @@
     "        return self.tags[np.argmax(prob_tags)]\n",
     "    \n",
     "    def predict_batch(self, docs):\n",
-    "        return [self.predict_tag(doc) for doc in docs]"
+    "        predict_tags = []\n",
+    "        i = 0\n",
+    "        for doc in docs:\n",
+    "            predict_tags.append(self.predict_tag(doc))\n",
+    "            if i % len(docs)/20:\n",
+    "                print(\"Predicted {} of {} documents\".format(i + 1, len(docs)))\n",
+    "        return predict_tags"
    ]
   },
   {
