Change workflow for optimizing alpha

--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
+    "import math\n",
     "import string\n",
     "from nltk.corpus import stopwords\n",
     "from collections import Counter"
@@ -41,23 +42,42 @@
    "outputs": [],
    "source": [
     "# Splitting data 70 % train, 30 % test\n",
-    "train_df = data.loc[data['fold_id'] < 7]\n",
-    "test_df = data.loc[data['fold_id'] >= 7]"
+    "train_df = data.loc[data['fold_id'] < 3]\n",
+    "test_df = data.loc[data['fold_id'] == 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_best_alpha(train_data):\n",
+    "    alpha_values = [x for x in range(80, 120, 5)]\n",
+    "    accuracies = np.zeros([len(alpha_values), len(train_data.fold_id.values)])\n",
+    "    for fold in range(len(train_data.fold_id.values)):\n",
+    "        test = train_data.loc[train_data['fold_id'] == fold]\n",
+    "        train = train_data.loc[train_data['fold_id'] != fold]\n",
+    "        nbt = NaiveBayesText(train)\n",
+    "        if len(test['tag']) == 0:\n",
+    "            continue\n",
+    "        i = 0\n",
+    "        for a in alpha_values:\n",
+    "            y_hat = nbt.predict_batch(test['text'], alpha=a)\n",
+    "            accuracy = calculate_accuracy(y_hat, test['tag'])\n",
+    "            print(\"validation accuracy for fold = {}, alpha = {} is {:1.3f}\"\n",
+    "                  .format(fold, a, accuracy))\n",
+    "            accuracies[i][fold] = accuracy\n",
+    "            i += 1\n",
+    "    return alpha_values[np.argmax(accuracies.mean(axis=1))]\n",
+    "\n",
     "def calculate_accuracy(y_hat, y):\n",
     "    return sum(1 for a, b in zip(y_hat,y) if a == b) / len(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +90,7 @@
     "            and a column called 'text'\n",
     "        \"\"\"\n",
     "        self.train_df = train_df\n",
+    "        # change documents to a bag of words representation\n",
     "        if type(self.train_df.text.values[0]) == 'str':\n",
     "            self.clean_documents()\n",
     "        self.tags = list(set(train_df.tag.values))\n",
@@ -97,72 +118,43 @@
     "    def prob_tag(self, tag):\n",
     "        return len(self.train_df.loc[self.train_df['tag'] == tag])/len(self.train_df)\n",
     "\n",
-    "    def prob_doc_given_tag(self, doc, tag):\n",
-    "        prob_words = np.array([self.prob_word_given_tag(word, tag) \n",
+    "    def prob_doc_given_tag(self, doc, tag, alpha):\n",
+    "        prob_words = np.array([self.prob_word_given_tag(word, tag, alpha) \n",
     "                               for word in doc.split()])\n",
     "        return np.prod(prob_words) * self.prob_tag(tag)\n",
     "\n",
-    "    def prob_word_given_tag(self, word, tag):\n",
+    "    def prob_word_given_tag(self, word, tag, alpha):\n",
     "        word_count = self.tag_vocabulary_counts[tag][word]\n",
-    "        return (word_count + 1)/(len(self.tag_vocabulary_counts) + self.total_vocabulary_size)\n",
+    "        return (word_count + alpha)/(len(self.tag_vocabulary_counts) + alpha * \n",
+    "                                          self.total_vocabulary_size)\n",
     "\n",
-    "    def predict_tag(self, doc):\n",
-    "        prob_tags = np.array([self.prob_doc_given_tag(doc, tag) for tag in self.tags])\n",
+    "    def predict_tag(self, doc, alpha):\n",
+    "        prob_tags = np.array([self.prob_doc_given_tag(doc, tag, alpha) for tag in self.tags])\n",
     "        return self.tags[np.argmax(prob_tags)]\n",
     "    \n",
-    "    def predict_batch(self, docs):\n",
+    "    def predict_batch(self, docs, print_progress = False, alpha=1):\n",
     "        predict_tags = []\n",
     "        i = 0\n",
     "        for doc in docs:\n",
-    "            predict_tags.append(self.predict_tag(doc))\n",
-    "            if i % 2000 == 0:\n",
+    "            predict_tags.append(self.predict_tag(doc, alpha))\n",
+    "            if print_progress and i % 2000 == 0:\n",
     "                print(\"Predicted {} of {} documents\".format(i, len(docs)))\n",
     "            i += 1\n",
+    "        if print_progress:\n",
+    "            print(\"Predicted all documents\\n\")\n",
     "        return predict_tags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted 0 of 19425 documents\n",
-      "Predicted 2000 of 19425 documents\n",
-      "Predicted 4000 of 19425 documents\n",
-      "Predicted 6000 of 19425 documents\n",
-      "Predicted 8000 of 19425 documents\n",
-      "Predicted 10000 of 19425 documents\n",
-      "Predicted 12000 of 19425 documents\n",
-      "Predicted 14000 of 19425 documents\n",
-      "Predicted 16000 of 19425 documents\n",
-      "Predicted 18000 of 19425 documents\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "best_alpha = get_best_alpha(train_df)\n",
     "# Use the best parameter\n",
     "nbt = NaiveBayesText(train_df)\n",
-    "y_hat = nbt.predict_batch(test_df['text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test set accuracy: 52.366%\n"
-     ]
-    }
-   ],
-   "source": [
+    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True, alpha=best_alpha)\n",
     "test_acc = calculate_accuracy(test_df['tag'], y_hat)\n",
     "print(\"Test set accuracy: {:1.3f}%\".format(test_acc * 100))"
    ]
