--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -26,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data and parse it\n",
-    "data = pd.read_csv('../datasets/movie_reviews.csv')\n",
+    "data = pd.read_csv('../datasets/movie_reviews_smaller.csv')\n",
     "data = data[['fold_id', 'text', 'tag']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_best_alpha(train_data):\n",
-    "    alpha_values = [x for x in range(80, 120, 5)]\n",
+    "    alpha_values = [x/100 for x in range(500, 600, 5)]\n",
     "    accuracies = np.zeros([len(alpha_values), len(train_data.fold_id.values)])\n",
     "    for fold in range(len(train_data.fold_id.values)):\n",
     "        test = train_data.loc[train_data['fold_id'] == fold]\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +147,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "validation accuracy for fold = 0, alpha = 5.0 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.05 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.1 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.15 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.2 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.25 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.3 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.35 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.4 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.45 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.5 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.55 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.6 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.65 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.7 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.75 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.8 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.85 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.9 is 0.530\n",
+      "validation accuracy for fold = 0, alpha = 5.95 is 0.530\n",
+      "validation accuracy for fold = 1, alpha = 5.0 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.05 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.1 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.15 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.2 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.25 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.3 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.35 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.4 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.45 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.5 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.55 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.6 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.65 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.7 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.75 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.8 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.85 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.9 is 0.455\n",
+      "validation accuracy for fold = 1, alpha = 5.95 is 0.455\n",
+      "validation accuracy for fold = 2, alpha = 5.0 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.05 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.1 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.15 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.2 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.25 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.3 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.35 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.4 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.45 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.5 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.55 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.6 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.65 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.7 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.75 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.8 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.85 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.9 is 0.555\n",
+      "validation accuracy for fold = 2, alpha = 5.95 is 0.555\n",
+      "Predicted 0 of 202 documents\n",
+      "Predicted all documents\n",
+      "\n",
+      "Test set accuracy: 56.931%\n"
+     ]
+    }
+   ],
    "source": [
     "best_alpha = get_best_alpha(train_df)\n",
     "# Use the best parameter\n",
