--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -18,61 +18,44 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
-    "import math\n",
-    "import string\n",
-    "from nltk.corpus import stopwords\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5574 entries, 0 to 5573\n",
+      "Data columns (total 2 columns):\n",
+      "tag     5574 non-null object\n",
+      "text    5574 non-null object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 87.2+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "# read data and parse it\n",
-    "data = pd.read_csv('../datasets/movie_reviews_smaller.csv')\n",
-    "data = data[['fold_id', 'text', 'tag']]"
+    "data = pd.read_csv('../datasets/sms_spam.csv', names=['tag', 'text'])\n",
+    "data.text = [str(doc) for doc in data['text']]\n",
+    "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting data 70 % train, 30 % test\n",
-    "train_df = data.loc[data['fold_id'] < 3]\n",
-    "test_df = data.loc[data['fold_id'] == 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_best_alpha(train_data):\n",
-    "    alpha_values = [x/100 for x in range(500, 600, 5)]\n",
-    "    accuracies = np.zeros([len(alpha_values), len(train_data.fold_id.values)])\n",
-    "    for fold in range(len(train_data.fold_id.values)):\n",
-    "        test = train_data.loc[train_data['fold_id'] == fold]\n",
-    "        train = train_data.loc[train_data['fold_id'] != fold]\n",
-    "        nbt = NaiveBayesText(train)\n",
-    "        if len(test['tag']) == 0:\n",
-    "            continue\n",
-    "        i = 0\n",
-    "        for a in alpha_values:\n",
-    "            y_hat = nbt.predict_batch(test['text'], alpha=a)\n",
-    "            accuracy = calculate_accuracy(y_hat, test['tag'])\n",
-    "            print(\"validation accuracy for fold = {}, alpha = {} is {:1.3f}\"\n",
-    "                  .format(fold, a, accuracy))\n",
-    "            accuracies[i][fold] = accuracy\n",
-    "            i += 1\n",
-    "    return alpha_values[np.argmax(accuracies.mean(axis=1))]\n",
-    "\n",
-    "def calculate_accuracy(y_hat, y):\n",
-    "    return sum(1 for a, b in zip(y_hat,y) if a == b) / len(y)"
+    "train_df = data.iloc[:3000, :]\n",
+    "test_df = data.iloc[3001:, :]"
    ]
   },
   {
@@ -90,23 +73,14 @@
     "            and a column called 'text'\n",
     "        \"\"\"\n",
     "        self.train_df = train_df\n",
-    "        # change documents to a bag of words representation\n",
-    "        if type(self.train_df.text.values[0]) == 'str':\n",
-    "            self.clean_documents()\n",
+    "        # pre-processing to remove punctuations\n",
+    "        self.train_df['text'] = [\n",
+    "            re.sub('\\d|\\\"|\\'|!|\\)|\\(|\\.|,|\\\\b', '', doc).split() \n",
+    "            for doc in train_df.text.values]\n",
     "        self.tags = list(set(train_df.tag.values))\n",
+    "        self.total_vocabulary_size = len(self.get_vocabulary(self.train_df))\n",
     "        self.tag_vocabulary_counts = {tag : Counter(self.get_vocabulary(\n",
     "            self.train_df.loc[self.train_df['tag'] == tag])) for tag in self.tags}\n",
-    "        self.total_vocabulary_size = len(self.get_vocabulary(self.train_df))\n",
-    "        \n",
-    "    def clean_documents(self):\n",
-    "        waste = '\\d|\\\"|\\'|!|\\)|\\(|\\.|,|' + '\\\\b(' + \\\n",
-    "            '|'.join(stopwords.words('english')) + ')\\\\W'\n",
-    "        self.train_df.loc[:, self.train_df.columns == 'text'] = self.train_df.text.apply(\n",
-    "            lambda doc : self.clean_document(doc, waste))\n",
-    "\n",
-    "    def clean_document(self, doc, waste):\n",
-    "        \"\"\" Removes useless filler words/punctuations from text \"\"\"\n",
-    "        return re.sub(waste, '', doc).split()\n",
     "    \n",
     "    def get_vocabulary(self, df):\n",
     "        vocabulary = []\n",
@@ -137,8 +111,8 @@
     "        i = 0\n",
     "        for doc in docs:\n",
     "            predict_tags.append(self.predict_tag(doc, alpha))\n",
-    "            if print_progress and i % 2000 == 0:\n",
-    "                print(\"Predicted {} of {} documents\".format(i, len(docs)))\n",
+    "            if print_progress and i % len(docs)//10 == 0:\n",
+    "                print(\"Predicted {} of {} documents\".format(i * len(docs)//10, len(docs)))\n",
     "            i += 1\n",
     "        if print_progress:\n",
     "            print(\"Predicted all documents\\n\")\n",
@@ -148,86 +122,78 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_best_alpha(train_data):\n",
+    "    alpha_values = [x/100 for x in range(500, 600, 5)]\n",
+    "    accuracies = np.zeros([len(alpha_values), len(train_data.fold_id.values)])\n",
+    "    for fold in range(len(train_data.fold_id.values)):\n",
+    "        test = train_data.loc[train_data['fold_id'] == fold]\n",
+    "        train = train_data.loc[train_data['fold_id'] != fold]\n",
+    "        nbt = NaiveBayesText(train)\n",
+    "        if len(test['tag']) == 0:\n",
+    "            continue\n",
+    "        i = 0\n",
+    "        for a in alpha_values:\n",
+    "            y_hat = nbt.predict_batch(test['text'], alpha=a)\n",
+    "            accuracy = calculate_accuracy(y_hat, test['tag'])\n",
+    "            accuracies[i][fold] = accuracy\n",
+    "            i += 1\n",
+    "    alpha_accuracies = accuracies.mean(axis=1)\n",
+    "    for j in range(len(alpha_values)):\n",
+    "        print(\"validation accuracy for alpha = {} is {}\"\n",
+    "              .format(alpha_values[j], alpha_accuracies[j]))\n",
+    "    return alpha_values[np.argmax(alpha_accuracies)]\n",
+    "\n",
+    "def calculate_accuracy(y_hat, y):\n",
+    "    return sum(1 for a, b in zip(y_hat,y) if a == b) / len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pranaymethuku/.local/lib/python3.5/site-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  del sys.path[0]\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "validation accuracy for fold = 0, alpha = 5.0 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.05 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.1 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.15 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.2 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.25 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.3 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.35 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.4 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.45 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.5 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.55 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.6 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.65 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.7 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.75 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.8 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.85 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.9 is 0.530\n",
-      "validation accuracy for fold = 0, alpha = 5.95 is 0.530\n",
-      "validation accuracy for fold = 1, alpha = 5.0 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.05 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.1 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.15 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.2 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.25 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.3 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.35 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.4 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.45 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.5 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.55 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.6 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.65 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.7 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.75 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.8 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.85 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.9 is 0.455\n",
-      "validation accuracy for fold = 1, alpha = 5.95 is 0.455\n",
-      "validation accuracy for fold = 2, alpha = 5.0 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.05 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.1 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.15 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.2 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.25 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.3 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.35 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.4 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.45 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.5 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.55 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.6 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.65 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.7 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.75 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.8 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.85 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.9 is 0.555\n",
-      "validation accuracy for fold = 2, alpha = 5.95 is 0.555\n",
-      "Predicted 0 of 202 documents\n",
+      "Predicted 0 of 2573 documents\n",
+      "Predicted 257 of 2573 documents\n",
+      "Predicted 514 of 2573 documents\n",
+      "Predicted 771 of 2573 documents\n",
+      "Predicted 1029 of 2573 documents\n",
+      "Predicted 1286 of 2573 documents\n",
+      "Predicted 1543 of 2573 documents\n",
+      "Predicted 1801 of 2573 documents\n",
+      "Predicted 2058 of 2573 documents\n",
+      "Predicted 2315 of 2573 documents\n",
       "Predicted all documents\n",
       "\n",
-      "Test set accuracy: 56.931%\n"
+      "Test set accuracy: 90.983%\n"
      ]
     }
    ],
    "source": [
-    "best_alpha = get_best_alpha(train_df)\n",
+    "# best_alpha = get_best_alpha(train_df)\n",
     "# Use the best parameter\n",
     "nbt = NaiveBayesText(train_df)\n",
-    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True, alpha=best_alpha)\n",
+    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True)\n",
     "test_acc = calculate_accuracy(test_df['tag'], y_hat)\n",
     "print(\"Test set accuracy: {:1.3f}%\".format(test_acc * 100))"
    ]
