Add some data info for spam classifier

--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Naive Bayes Classification\n",
     "\n",
-    "The dataset was obtained from https://www.kaggle.com/nltkdata/movie-review."
+    "The dataset was obtained from https://archive.ics.uci.edu/ml/datasets/SMS+Spam+Collection."
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -36,15 +36,85 @@
       "tag     5574 non-null object\n",
       "text    5574 non-null object\n",
       "dtypes: object(2)\n",
-      "memory usage: 87.2+ KB\n"
+      "memory usage: 87.2+ KB\n",
+      "None\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tag</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point crazy.. Available only i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf he lives arou...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    tag                                               text\n",
+       "0   ham  Go until jurong point crazy.. Available only i...\n",
+       "1   ham                      Ok lar... Joking wif u oni...\n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+       "3   ham  U dun say so early hor... U c already then say...\n",
+       "4   ham  Nah I don't think he goes to usf he lives arou..."
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# read data and parse it\n",
     "data = pd.read_csv('../datasets/sms_spam.csv', names=['tag', 'text'])\n",
     "data.text = [str(doc) for doc in data['text']]\n",
-    "data.info()"
+    "print(data.info())\n",
+    "data.head()"
    ]
   },
   {
@@ -125,27 +195,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_best_alpha(train_data):\n",
-    "    alpha_values = [x/100 for x in range(500, 600, 5)]\n",
-    "    accuracies = np.zeros([len(alpha_values), len(train_data.fold_id.values)])\n",
-    "    for fold in range(len(train_data.fold_id.values)):\n",
-    "        test = train_data.loc[train_data['fold_id'] == fold]\n",
-    "        train = train_data.loc[train_data['fold_id'] != fold]\n",
-    "        nbt = NaiveBayesText(train)\n",
-    "        if len(test['tag']) == 0:\n",
-    "            continue\n",
-    "        i = 0\n",
-    "        for a in alpha_values:\n",
-    "            y_hat = nbt.predict_batch(test['text'], alpha=a)\n",
-    "            accuracy = calculate_accuracy(y_hat, test['tag'])\n",
-    "            accuracies[i][fold] = accuracy\n",
-    "            i += 1\n",
-    "    alpha_accuracies = accuracies.mean(axis=1)\n",
-    "    for j in range(len(alpha_values)):\n",
-    "        print(\"validation accuracy for alpha = {} is {}\"\n",
-    "              .format(alpha_values[j], alpha_accuracies[j]))\n",
-    "    return alpha_values[np.argmax(alpha_accuracies)]\n",
-    "\n",
     "def calculate_accuracy(y_hat, y):\n",
     "    return sum(1 for a, b in zip(y_hat,y) if a == b) / len(y)"
    ]
@@ -190,7 +239,6 @@
     }
    ],
    "source": [
-    "# best_alpha = get_best_alpha(train_df)\n",
     "# Use the best parameter\n",
     "nbt = NaiveBayesText(train_df)\n",
     "y_hat = nbt.predict_batch(test_df['text'], print_progress=True)\n",
