Optimize to 93.59% with alpha=0.01

--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4   ham  Nah I don't think he goes to usf he lives arou..."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +144,11 @@
     "        \"\"\"\n",
     "        self.train_df = train_df\n",
     "        # pre-processing to remove punctuations\n",
-    "        self.train_df['text'] = [\n",
-    "            re.sub('\\d|\\\"|\\'|!|\\)|\\(|\\.|,|\\\\b', '', doc).split() \n",
-    "            for doc in train_df.text.values]\n",
+    "        # check if data hasn't already been pre-processed due to Jupyter cache issues\n",
+    "        if type(self.train_df.text.values[0]) == 'str':\n",
+    "            self.train_df['text'] = [\n",
+    "                re.sub('\\d|\\\"|\\'|!|\\)|\\(|\\.|,|\\\\b', '', doc).split() \n",
+    "                for doc in train_df.text.values]\n",
     "        self.tags = list(set(train_df.tag.values))\n",
     "        self.total_vocabulary_size = len(self.get_vocabulary(self.train_df))\n",
     "        self.tag_vocabulary_counts = {tag : Counter(self.get_vocabulary(\n",
@@ -169,8 +171,8 @@
     "\n",
     "    def prob_word_given_tag(self, word, tag, alpha):\n",
     "        word_count = self.tag_vocabulary_counts[tag][word]\n",
-    "        return (word_count + alpha)/(len(self.tag_vocabulary_counts) + alpha * \n",
-    "                                          self.total_vocabulary_size)\n",
+    "        return ((word_count + alpha)/(len(self.tag_vocabulary_counts) + alpha * \n",
+    "                                          self.total_vocabulary_size))\n",
     "\n",
     "    def predict_tag(self, doc, alpha):\n",
     "        prob_tags = np.array([self.prob_doc_given_tag(doc, tag, alpha) for tag in self.tags])\n",
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,23 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pranaymethuku/.local/lib/python3.5/site-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  del sys.path[0]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -231,17 +221,15 @@
       "Predicted 1543 of 2573 documents\n",
       "Predicted 1801 of 2573 documents\n",
       "Predicted 2058 of 2573 documents\n",
-      "Predicted 2315 of 2573 documents\n",
-      "Predicted all documents\n",
-      "\n",
-      "Test set accuracy: 90.983%\n"
+      "Predicted 2315 of 2573 documents\n"
      ]
     }
    ],
    "source": [
+    "# best_alpha = get_best_alpha(train_df)\n",
     "# Use the best parameter\n",
     "nbt = NaiveBayesText(train_df)\n",
-    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True)\n",
+    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True, alpha=0.01)\n",
     "test_acc = calculate_accuracy(test_df['tag'], y_hat)\n",
     "print(\"Test set accuracy: {:1.3f}%\".format(test_acc * 100))"
    ]
