--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -221,7 +221,10 @@
       "Predicted 1543 of 2573 documents\n",
       "Predicted 1801 of 2573 documents\n",
       "Predicted 2058 of 2573 documents\n",
-      "Predicted 2315 of 2573 documents\n"
+      "Predicted 2315 of 2573 documents\n",
+      "Predicted all documents\n",
+      "\n",
+      "Test set accuracy: 93.587%\n"
      ]
     }
    ],
