Change to log probabilities, add time magic command

--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -11,19 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
+    "import math\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
        "4   ham  Nah I don't think he goes to usf he lives arou..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
     "                re.sub('\\d|\\\"|\\'|!|\\)|\\(|\\.|,|\\\\b', '', doc).split() \n",
     "                for doc in train_df.text.values]\n",
     "        self.tags = list(set(train_df.tag.values))\n",
-    "        self.total_vocabulary_size = len(self.get_vocabulary(self.train_df))\n",
+    "        self.total_vocabulary_size = len(set(self.get_vocabulary(self.train_df)))\n",
     "        self.tag_vocabulary_counts = {tag : Counter(self.get_vocabulary(\n",
     "            self.train_df.loc[self.train_df['tag'] == tag])) for tag in self.tags}\n",
     "    \n",
@@ -167,11 +168,11 @@
     "    def prob_doc_given_tag(self, doc, tag, alpha):\n",
     "        prob_words = np.array([self.prob_word_given_tag(word, tag, alpha) \n",
     "                               for word in doc.split()])\n",
-    "        return np.prod(prob_words) * self.prob_tag(tag)\n",
+    "        return np.sum(prob_words) + math.log(self.prob_tag(tag))\n",
     "\n",
     "    def prob_word_given_tag(self, word, tag, alpha):\n",
     "        word_count = self.tag_vocabulary_counts[tag][word]\n",
-    "        return ((word_count + alpha)/(len(self.tag_vocabulary_counts) + alpha * \n",
+    "        return math.log((word_count + alpha)/(len(self.tag_vocabulary_counts) + alpha * \n",
     "                                          self.total_vocabulary_size))\n",
     "\n",
     "    def predict_tag(self, doc, alpha):\n",
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -224,12 +225,14 @@
       "Predicted 1003 of 1115 documents\n",
       "Predicted all documents\n",
       "\n",
-      "Test set accuracy: 85.202%\n"
+      "Test set accuracy: 85.561%\n",
+      "CPU times: user 1min 23s, sys: 136 ms, total: 1min 24s\n",
+      "Wall time: 1min 24s\n"
      ]
     }
    ],
    "source": [
-    "# Use the best parameter\n",
+    "%%time\n",
     "nbt = NaiveBayesText(train_df)\n",
     "y_hat = nbt.predict_batch(test_df['text'], print_progress=True, alpha=0.1)\n",
     "test_acc = calculate_accuracy(test_df['tag'], y_hat)\n",
