--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4   ham  Nah I don't think he goes to usf he lives arou..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +151,8 @@
     "                re.sub('\\d|\\\"|\\'|!|\\)|\\(|\\.|,|\\\\b', '', doc).split() \n",
     "                for doc in train_df.text.values]\n",
     "        self.tags = list(set(train_df.tag.values))\n",
+    "        self.tag_probs = {tag: len(train_df.loc[train_df['tag'] == tag])/len(train_df)\n",
+    "                         for tag in self.tags}\n",
     "        self.total_vocabulary_size = len(set(self.get_vocabulary(self.train_df)))\n",
     "        self.tag_vocabulary_counts = {tag : Counter(self.get_vocabulary(\n",
     "            self.train_df.loc[self.train_df['tag'] == tag])) for tag in self.tags}\n",
@@ -161,18 +163,15 @@
     "            for word in doc_list:\n",
     "                vocabulary.append(word)\n",
     "        return vocabulary\n",
-    "    \n",
-    "    def prob_tag(self, tag):\n",
-    "        return len(self.train_df.loc[self.train_df['tag'] == tag])/len(self.train_df)\n",
     "\n",
     "    def prob_doc_given_tag(self, doc, tag, alpha):\n",
     "        prob_words = np.array([self.prob_word_given_tag(word, tag, alpha) \n",
     "                               for word in doc.split()])\n",
-    "        return np.sum(prob_words) + math.log(self.prob_tag(tag))\n",
+    "        return np.sum(prob_words) + math.log(self.tag_probs[tag])\n",
     "\n",
     "    def prob_word_given_tag(self, word, tag, alpha):\n",
     "        word_count = self.tag_vocabulary_counts[tag][word]\n",
-    "        return math.log((word_count + alpha)/(len(self.tag_vocabulary_counts) + alpha * \n",
+    "        return math.log((word_count + alpha)/(len(self.tag_vocabulary_counts[tag]) + alpha * \n",
     "                                          self.total_vocabulary_size))\n",
     "\n",
     "    def predict_tag(self, doc, alpha):\n",
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -226,15 +225,15 @@
       "Predicted all documents\n",
       "\n",
       "Test set accuracy: 85.561%\n",
-      "CPU times: user 1min 23s, sys: 136 ms, total: 1min 24s\n",
-      "Wall time: 1min 24s\n"
+      "CPU times: user 2.91 s, sys: 12.8 ms, total: 2.92 s\n",
+      "Wall time: 2.9 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "nbt = NaiveBayesText(train_df)\n",
-    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True, alpha=0.1)\n",
+    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True, alpha=10.)\n",
     "test_acc = calculate_accuracy(test_df['tag'], y_hat)\n",
     "print(\"Test set accuracy: {:1.3f}%\".format(test_acc * 100))"
    ]
