remove verbose output

--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4   ham  Nah I don't think he goes to usf he lives arou..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
     "        # check if data hasn't already been pre-processed due to Jupyter cache issues\n",
     "        if type(self.train_df.text.values[0]) == 'str':\n",
     "            self.train_df['text'] = [\n",
-    "                re.sub('\\d|\\\"|\\'|!|\\)|\\(|\\.|,|\\\\b', '', doc).split() \n",
+    "                re.sub('\\)|\\(|\\.|,', '', doc).split() \n",
     "                for doc in train_df.text.values]\n",
     "        self.tags = list(set(train_df.tag.values))\n",
     "        self.tag_probs = {tag: len(train_df.loc[train_df['tag'] == tag])/len(train_df)\n",
@@ -178,16 +178,10 @@
     "        prob_tags = np.array([self.prob_doc_given_tag(doc, tag, alpha) for tag in self.tags])\n",
     "        return self.tags[np.argmax(prob_tags)]\n",
     "    \n",
-    "    def predict_batch(self, docs, print_progress = False, alpha=1):\n",
+    "    def predict_batch(self, docs, alpha=1):\n",
     "        predict_tags = []\n",
-    "        i = 0\n",
     "        for doc in docs:\n",
-    "            predict_tags.append(self.predict_tag(doc, alpha))\n",
-    "            if print_progress and i % len(docs)//10 == 0:\n",
-    "                print(\"Predicted {} of {} documents\".format(i * len(docs)//10, len(docs)))\n",
-    "            i += 1\n",
-    "        if print_progress:\n",
-    "            print(\"Predicted all documents\\n\")\n",
+    "            predict_tags.append(self.predict_tag(doc, alpha))        \n",
     "        return predict_tags"
    ]
   },
@@ -203,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -212,28 +206,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted 0 of 1115 documents\n",
-      "Predicted 111 of 1115 documents\n",
-      "Predicted 223 of 1115 documents\n",
-      "Predicted 334 of 1115 documents\n",
-      "Predicted 446 of 1115 documents\n",
-      "Predicted 557 of 1115 documents\n",
-      "Predicted 669 of 1115 documents\n",
-      "Predicted 780 of 1115 documents\n",
-      "Predicted 892 of 1115 documents\n",
-      "Predicted 1003 of 1115 documents\n",
-      "Predicted all documents\n",
-      "\n",
       "Test set accuracy: 85.561%\n",
-      "CPU times: user 2.91 s, sys: 12.8 ms, total: 2.92 s\n",
-      "Wall time: 2.9 s\n"
+      "CPU times: user 2.8 s, sys: 3.57 ms, total: 2.8 s\n",
+      "Wall time: 2.8 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "nbt = NaiveBayesText(train_df)\n",
-    "y_hat = nbt.predict_batch(test_df['text'], print_progress=True, alpha=10.)\n",
+    "y_hat = nbt.predict_batch(test_df['text'], alpha=10.)\n",
     "test_acc = calculate_accuracy(test_df['tag'], y_hat)\n",
     "print(\"Test set accuracy: {:1.3f}%\".format(test_acc * 100))"
    ]
