Preprocess both test and train, accuracy 96.95%

--- a/notebooks/naive_bayes_classification.ipynb
+++ b/notebooks/naive_bayes_classification.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "import pandas as pd\n",
     "import re\n",
     "import math\n",
+    "import string\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,27 +71,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ham</td>\n",
-       "      <td>Go until jurong point crazy.. Available only i...</td>\n",
+       "      <td>[Go, until, jurong, point, crazy, Available, o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ham</td>\n",
-       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>[Ok, lar, Joking, wif, u, oni]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>spam</td>\n",
-       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>[Free, entry, in, 2, a, wkly, comp, to, win, F...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ham</td>\n",
-       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>[U, dun, say, so, early, hor, U, c, already, t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ham</td>\n",
-       "      <td>Nah I don't think he goes to usf he lives arou...</td>\n",
+       "      <td>[Nah, I, dont, think, he, goes, to, usf, he, l...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -98,14 +99,14 @@
       ],
       "text/plain": [
        "    tag                                               text\n",
-       "0   ham  Go until jurong point crazy.. Available only i...\n",
-       "1   ham                      Ok lar... Joking wif u oni...\n",
-       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
-       "3   ham  U dun say so early hor... U c already then say...\n",
-       "4   ham  Nah I don't think he goes to usf he lives arou..."
+       "0   ham  [Go, until, jurong, point, crazy, Available, o...\n",
+       "1   ham                     [Ok, lar, Joking, wif, u, oni]\n",
+       "2  spam  [Free, entry, in, 2, a, wkly, comp, to, win, F...\n",
+       "3   ham  [U, dun, say, so, early, hor, U, c, already, t...\n",
+       "4   ham  [Nah, I, dont, think, he, goes, to, usf, he, l..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,14 +114,17 @@
    "source": [
     "# read data and parse it\n",
     "data = pd.read_csv('../datasets/sms_spam.csv', names=['tag', 'text'])\n",
-    "data.text = [str(doc) for doc in data['text']]\n",
+    "# stripping punctuation\n",
+    "punct_stripper = str.maketrans(dict.fromkeys(string.punctuation))\n",
+    "# tokenizing data\n",
+    "data.text = [str(doc).translate(punct_stripper).split() for doc in data['text']]\n",
     "print(data.info())\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,17 +148,11 @@
     "            and a column called 'text'\n",
     "        \"\"\"\n",
     "        self.train_df = train_df\n",
-    "        # pre-processing to remove punctuations\n",
-    "        # check if data hasn't already been pre-processed due to Jupyter cache issues\n",
-    "        if type(self.train_df.text.values[0]) == 'str':\n",
-    "            self.train_df['text'] = [\n",
-    "                re.sub('\\)|\\(|\\.|,', '', doc).split() \n",
-    "                for doc in train_df.text.values]\n",
     "        self.tags = list(set(train_df.tag.values))\n",
     "        self.tag_probs = {tag: len(train_df.loc[train_df['tag'] == tag])/len(train_df)\n",
     "                         for tag in self.tags}\n",
     "        self.total_vocabulary_size = len(set(self.get_vocabulary(self.train_df)))\n",
-    "        self.tag_vocabulary_counts = {tag : Counter(self.get_vocabulary(\n",
+    "        self.tag_word_counts = {tag : Counter(self.get_vocabulary(\n",
     "            self.train_df.loc[self.train_df['tag'] == tag])) for tag in self.tags}\n",
     "    \n",
     "    def get_vocabulary(self, df):\n",
@@ -164,14 +162,14 @@
     "                vocabulary.append(word)\n",
     "        return vocabulary\n",
     "\n",
-    "    def prob_doc_given_tag(self, doc, tag, alpha):\n",
-    "        prob_words = np.array([self.prob_word_given_tag(word, tag, alpha) \n",
-    "                               for word in doc.split()])\n",
+    "    def prob_doc_given_tag(self, tokenized_doc, tag, alpha):\n",
+    "        prob_words = np.array([self.posterior_word_prob(word, tag, alpha) \n",
+    "                               for word in tokenized_doc])\n",
     "        return np.sum(prob_words) + math.log(self.tag_probs[tag])\n",
     "\n",
-    "    def prob_word_given_tag(self, word, tag, alpha):\n",
-    "        word_count = self.tag_vocabulary_counts[tag][word]\n",
-    "        return math.log((word_count + alpha)/(len(self.tag_vocabulary_counts[tag]) + alpha * \n",
+    "    def posterior_word_prob(self, word, tag, alpha):\n",
+    "        word_count = self.tag_word_counts[tag][word]\n",
+    "        return math.log((word_count + alpha)/(len(self.tag_word_counts[tag]) + alpha * \n",
     "                                          self.total_vocabulary_size))\n",
     "\n",
     "    def predict_tag(self, doc, alpha):\n",
@@ -187,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -206,16 +204,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set accuracy: 85.561%\n",
-      "CPU times: user 2.8 s, sys: 3.57 ms, total: 2.8 s\n",
-      "Wall time: 2.8 s\n"
+      "Test set accuracy: 96.951%\n",
+      "CPU times: user 2.65 s, sys: 3.74 ms, total: 2.65 s\n",
+      "Wall time: 2.65 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "nbt = NaiveBayesText(train_df)\n",
-    "y_hat = nbt.predict_batch(test_df['text'], alpha=10.)\n",
+    "y_hat = nbt.predict_batch(test_df['text'], alpha=0.08)\n",
     "test_acc = calculate_accuracy(test_df['tag'], y_hat)\n",
     "print(\"Test set accuracy: {:1.3f}%\".format(test_acc * 100))"
    ]
